regression/reference/error/wrapCstruct_as_subclass.h
// wrapCstruct_as_subclass.h
// This file is generated by Shroud nowrite-version. Do not edit.
// Copyright Shroud Project Developers. See LICENSE file for details.
//
// SPDX-License-Identifier: (BSD-3-Clause)
//
/**
 * \file wrapCstruct_as_subclass.h
 * \brief Shroud generated wrapper for Cstruct_as_subclass class
 */
// For C users and C++ implementation

#ifndef WRAPCSTRUCT_AS_SUBCLASS_H
#define WRAPCSTRUCT_AS_SUBCLASS_H

// shroud
#include "typeserror.h"

// splicer begin class.Cstruct_as_subclass.CXX_declarations
// splicer end class.Cstruct_as_subclass.CXX_declarations

#ifdef __cplusplus
extern "C" {
#endif

// splicer begin class.Cstruct_as_subclass.C_declarations
// splicer end class.Cstruct_as_subclass.C_declarations

int ERR_Cstruct_as_subclass_get_x1(ERR_Cstruct_as_subclass * self);

void ERR_Cstruct_as_subclass_set_x1(ERR_Cstruct_as_subclass * self,
    int val);

int ERR_Cstruct_as_subclass_get_y1(ERR_Cstruct_as_subclass * self);

void ERR_Cstruct_as_subclass_set_y1(ERR_Cstruct_as_subclass * self,
    int val);

int ERR_Cstruct_as_subclass_get_z1(ERR_Cstruct_as_subclass * self);

void ERR_Cstruct_as_subclass_set_z1(ERR_Cstruct_as_subclass * self,
    int val);

#ifdef __cplusplus
}
#endif

#endif  // WRAPCSTRUCT_AS_SUBCLASS_H
